tests/invalid/import_inside_try/main.py
def main() -> None:
    x = bytes("!232")
